force-app/main/default/objects/sfdo_grants__FundRqstCollaboratorInvt__c/sfdo_grants__FundRqstCollaboratorInvt__c.object-meta.xml
<CustomObject>
    <description>Tracks the people who have been invited to collaborate on a Funding Request.</description>
    <label>Funding Request Collaborator Invitation</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Funding Request Collaborator Invitation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Request Collaborator Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>