force-app/main/default/objects/sfdo_grants__FundRqstCollaboratorInvt__c/fields/sfdo_grants__Email__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Email__c</fullName>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>