force-app/main/default/objects/sfdo_grants__FundRqstCollaboratorInvt__c/fields/sfdo_grants__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>