force-app/main/default/objects/sfdo_grants__FundRqstCollaboratorInvt__c/fields/sfdo_grants__FundingRequest__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__FundingRequest__c</fullName>
    <label>Funding Request</label>
    <referenceTo>outfunds__Funding_Request__c</referenceTo>
    <relationshipLabel>Funding Request Collaborator Invitations</relationshipLabel>
    <relationshipName>FundRqstCollaboratorInvts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>