force-app/main/default/objects/sfdo_grants__FundRqstCollaboratorInvt__c/fields/sfdo_grants__FundRqstCollaborator__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__FundRqstCollaborator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Request Collaborator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Funding Request Collaborator and this Funding Request Invitation must look up to the same Funding Request.</errorMessage>
        <filterItems>
            <field>sfdo_grants__FundRqstCollaborator__c.sfdo_grants__FundingRequest__c</field>
            <operation>equals</operation>
            <valueField>$Source.sfdo_grants__FundingRequest__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sfdo_grants__FundRqstCollaborator__c</referenceTo>
    <relationshipLabel>Funding Request Collaborator Invitations</relationshipLabel>
    <relationshipName>FundRqstCollaboratorInvts</relationshipName>
    <type>Lookup</type>
</CustomField>