force-app/main/default/objects/sfdo_grants__FundRqstCollaboratorInvt__c/fields/sfdo_grants__InvitationUrl__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__InvitationUrl__c</fullName>
    <description>Salesforce emails this invitation link to the collaborator. The collaborator can accept or decline the invitation.</description>
    <inlineHelpText>Salesforce emails this invitation link to the collaborator. The collaborator can accept or decline the invitation.</inlineHelpText>
    <label>Invitation URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>